2018-04-22  Liu Xin  <meteor1113@qq.com>

	* init/init-editor.el (whitespace-style): Adjust whitespace.

2017-11-01  Liu Xin  <meteor1113@qq.com>

	* init/modules/init-ecb.el : Change ecb-compile-window-height to 0.125

2017-10-13  Liu Xin  <meteor1113@qq.com>

	* init/modules/init-font.el: Upgrade chinese-fonts-setup to cnfonts.

2017-08-07  Liu Xin  <meteor1113@qq.com>

	* init/modules/init-toolbar.el: Fix toolbar for osx's crash.

2017-04-15  Liu Xin  <meteor1113@qq.com>

	* init/init-keybinding.el (eq): Bind command-<left> and
	command-<right> to home and end in os x.
	(eq): Key binding for os x.

2017-04-07  Liu Xin  <meteor1113@qq.com>

	* init/init-editor.el (after-init-hook): Disable zone for performance.

2017-03-21  Liu Xin  <meteor1113@qq.com>

	* init/modules/init-toolbar.el (eq): Disable toolbar for osx.

2017-01-23  Liu Xin  <meteor1113@qq.com>

	* init/init-package.el: Add package editorconfig.

2016-09-19  Liu Xin  <meteor1113@qq.com>

	* init/modules/init-font.el: Add init-font.el
	Improve init-font.el

2016-08-31  Liu Xin  <meteor1113@qq.com>

	* init/modules/init-tabbar.el: Don't load tabbar-ruler in daemon.

2016-07-29  Liu Xin  <meteor1113@qq.com>

	* init-emacs.el: Rename init.el to init-emacs.el

	* init/init-package.el: Use after-init-hook instead of run-with-idle-timer.

2016-04-27  Liu Xin  <meteor1113@qq.com>

	* init/init-editor.el (frame-title-format): Modify frame-title-format.

2016-02-06  Liu Xin  <meteor1113@qq.com>

	* init/modules/init-cedet.el ("pulse"): Speed up pulse.

2016-01-29  Liu Xin  <meteor1113@qq.com>

	* init/modules/init-toolbar.el: Add minor mode for helm-mode.

	* init/modules/init-calendar.el: Update appt setting for diary.

2016-01-28  Liu Xin  <meteor1113@qq.com>

	* init.el: Speed up.

2016-01-27  Liu Xin  <meteor1113@qq.com>

	* init/init-editor.el: Disable global-cwarn-mode.
	Don't load generic-x at start up.

2016-01-26  Liu Xin  <meteor1113@qq.com>
