@@ -23,7 +23,9 @@
              (setq whitespace-style (remq 'space-mark whitespace-style))
              (ignore-errors (whitespace-mode t))
              ;; (when window-system (ignore-errors (fci-mode 1)))
-             (linum-mode 1)
+             (if (fboundp 'display-line-numbers-mode)
+                 (display-line-numbers-mode 1)
+               (linum-mode 1))
              ;; (or (ignore-errors (hideshowvis-minor-mode t)) (hs-minor-mode t))
              (hs-minor-mode t)
              (ignore-errors (imenu-add-menubar-index))))
