@@ -1,3 +1,7 @@
+2018-06-08  Liu Xin  <meteor1113@qq.com>
+
+	* init/init-editor.el (fboundp): Use display-line-numbers-mode in emacs26.
+
 2018-04-22  Liu Xin  <meteor1113@qq.com>
 
 	* init/init-editor.el (whitespace-style): Adjust whitespace.
